# streamgen

./: Cargo.toml  README.md
.github/workflows/: ci.yml
resources/: symbols.txt
src/: main.rs
src/generators/: common_log.rs  mod.rs  nexmark.rs  schematized.rs
src/writers/: mod.rs  sse.rs  stdout.rs
src/writers/kafka/: mod.rs  writer.rs
